--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "exiting": "6.0.1",
     "joi": "17.x.x",
     "mysql": "^2.18.1",
+    "nodemailer": "^7.0.13",
     "objection": "2.x.x",
     "sqlite3": "5.0.2"
   },
